--- a/20240212＿コーディング２課題/CSS/work1.css
+++ b/20240212＿コーディング２課題/CSS/work1.css
@@ -100,3 +100,28 @@
     height: 300px;
     background-color: red;
 }
+
+@media screen and (max-width: 767px) {
+    .header_title {
+        margin: 0 auto;
+        align-items: center;
+        display: block;
+        padding: 20px 10px;
+        box-sizing: border-box;
+    }
+
+    .header_nav ul {
+        display: block;
+    }
+
+    .header_nav ul li {
+        padding: 10px 10px;
+        font-size: 14px;
+        border-bottom: 1px solid #4c4c4c;
+        border-right: none;
+    }
+
+    .header_nav ul li:last-child {
+        border-bottom: 1px solid #4c4c4c;
+    }
+}
