--- a/designcafe/css/style.css
+++ b/designcafe/css/style.css
@@ -39,6 +39,7 @@ main {
 
 .title img {
     height: 78px;
+    max-width: none;
 }
 
 .container {
@@ -52,7 +53,8 @@ main {
 
 .message {
     text-align: center;
-    padding-top: 107px;
+    padding: 107px 10px 97px 10px;
+    margin: 0 auto;
 }
 
 .text_en {
@@ -82,22 +84,32 @@ main {
 
 .about_us {
     display: flex;
-    padding-top: 100px;
-    gap: 80px;
+    padding: 0px 10px;
+    align-items: center;
+    gap: 78px;
+    margin: 0 auto;
+}
+
+.aboutus_img {
+    width: 100%;
+    max-width: none;
+    margin: 0 auto;
 }
 
 .aboutus_img img {
     border-bottom-right-radius: 50px;
-    width: 100%;
+    margin: 0 auto;
 }
 
 .aboutus_contents {
     text-align: left;
-    width: 50%;
+    width: 100%;
+    margin: 0 auto;
+    padding: 30px 0px 0px 0px;
 }
 
 .about_us h2 {
-    padding-bottom: 55px;
+    padding-bottom: 20px;
 }
 
 .about_maintext {
@@ -105,7 +117,7 @@ main {
     line-height: 1.39;
     letter-spacing: 0.1em;
     font-weight: medium;
-    padding-bottom: 40px;
+    padding-bottom: 18px;
 }
 
 .about_subtext {
@@ -120,6 +132,8 @@ main {
 
 .menu {
     padding-top: 108px;
+    padding: 108px 10px 0px 10px;
+    margin: 0 auto;
 }
 
 .menu h2 {
@@ -158,7 +172,7 @@ main {
 
 .gallery {
     padding-top: 97px;
-    margin: 0 auto;
+    margin: 0;
 }
 
 .gallery h2 {
@@ -174,6 +188,7 @@ main {
 
 .event {
     padding-top: 70px;
+    padding: 70px 10px 0px 10px;
 }
 .event h2 {
     text-align: center;
@@ -190,17 +205,17 @@ main {
 
 .event_wrap {
     padding-top: 38px;
-    padding-left: 15.8%;
 }
 
 .event_contents {
     display: flex;
-    max-width: 658px;
+    max-width: 680px;
+    width: 100%;
     margin: 0 auto;
     gap: 56px;
 }
 .event_contents p {
-    font-size: 17px;
+    font-size: 23px;
     line-height: 1.96;
 }
 
@@ -227,8 +242,7 @@ main {
     max-width: 1000px;
     display: flex;
     margin: 0 auto;
-    padding-top: 82px;
-    padding-bottom: 75px;
+    padding: 82px 10px 74px 10px;
 }
 
 .cafe_contact {
